--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Janelle Williams' Portfolio<br />
+						<h1>Jason Yaos' Portfolio<br />
 						</h1>
 						<p>Forward-thinking Data Analyst skilled in data analysis, data modeling, and  data visualizations in Excel, SQL, and Power BI. 
-							<a href="https://www.linkedin.com/in/williams-janelle/">@linkedin.com/williams-janelle</a>
+							<a href="https://www.linkedin.com/in/jasonyao74/">@linkedin.com/jasonyao74</a>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -40,7 +40,7 @@
 						
 						</ul>
 						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/williams-janelle/" class="icon brands fa-linkedin"><span class="label">linkedin</span></a></li>
+							<li><a href="https://www.linkedin.com/in/jasonyao74/" class="icon brands fa-linkedin"><span class="label">linkedin</span></a></li>
 						</ul>
 					</nav>
 
@@ -99,7 +99,7 @@
 								<section>
 										<h3>Social</h3>
 										<ul class="icons alt">
-											<li><a href="https://www.linkedin.com/in/williams-janelle/" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
+											<li><a href="https://www.linkedin.com/in/jasonyao74/" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
 									
 									</ul>
 								</section>
