--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Janelle Williams' Portfolio</title>
+		<title>Jason Yaos' Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -30,7 +30,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Janelle Williams' Portfolio</a>
+						<a href="index.html" class="logo">Jason Yaos' Portfolio</a>
 					</header>
 
 				<!-- Nav -->
@@ -94,7 +94,7 @@
 									<section class="split contact">
 										<section class="alt">
 											<h3>Location</h3>
-											<p>Atlanta, GA</p>
+											<p>Dallas, TX</p>
 								</section>
 								<section>
 										<h3>Social</h3>
